# zavan-pm-tool

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  skills-lock.json
.agents/skills/agent-browser/: SKILL.md
backend/: AGENTS.md  ai.py  auth.py  conftest.py  database.py  main.py  pyproject.toml  test_ai.py  test_auth.py  test_board.py  test_user.py
docs/: DATABASE.md  PLAN.md  schema.json
frontend/: AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: App.tsx  BoardSelector.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LoginForm.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  kanban.test.ts  kanban.ts
frontend/test-results/: .last-run.json
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.sh  stop.sh
